# TradingAgent

./: README.md  TradingAgent_v2.ipynb  TradingAgent_v3.ipynb  pyproject.toml
Data/: AAPL_stock_data.csv  AAPL_stock_data.xlsx  AVGO_stock_data.csv  AXP_stock_data.csv  BA_stock_data.csv  CAT_stock_data.csv  CSCO_stock_data.csv  CVX_stock_data.csv  DIS_stock_data.csv  GS_stock_data.csv  HD_stock_data.csv  IBM_stock_data.csv  INTC_stock_data.csv  JNJ_stock_data.csv  JPM_stock_data.csv  KO_stock_data.csv  MCD_stock_data.csv  MMM_stock_data.csv  MRK_stock_data.csv  MSFT_stock_data.csv  NKE_stock_data.csv  ORCL_stock_data.csv  PFE_stock_data.csv  PG_stock_data.csv  SATL_stock_data.csv  TRV_stock_data.csv  TSLA_stock_data.csv  UNH_stock_data.csv  VZ_stock_data.csv  V_stock_data.csv  WBA_stock_data.csv  WMT_stock_data.csv  XOM_stock_data.csv
Notebooks/: EnsembleTradingAgent_v1.ipynb  FFT_stock_analysis.ipynb  TradingAgent_v4.ipynb  data_downloader.ipynb
src/: fft_analyzer.py  utils.py
